--- a/Report/06-results.tex
+++ b/Report/06-results.tex
@@ -1,34 +1,21 @@
 \chapter{Results}\label{ch:results}
-We now describe the results of testing the ILP systems. 
+We now describe the results of testing the ILP systems. We conducted the experiments in accordance with the methods described in chapter \ref{ch:methodology}.
 
-
-
-
-
-%Q1 Does varying the quality of game traces influence the ability for learners to solve the IGGP problems? Specifically, does the quality of game play affect predictive accuracy?
-%Q2 Does varying the amount of game traces influence the ability for learners to solve the IGGP problems? Specifically, does the quality of game play affect predictive accuracy?
-%Q3 Can we improve the performance of a learner by mixing the quality of traces?
-
-
-
-\section{Answering research questions}
-
+To recap the research questions are as follows:
+\begin{itemize}
+	\item \textbf{Q1} - Does varying the quality of game traces influence the ability for learners to solve the IGGP problems? Specifically, does the quality of game play affect predictive accuracy?
+	\item \textbf{Q2} - Does varying the amount of game traces influence the ability for learners to solve the IGGP problems? Specifically, does the quality of game play affect predictive accuracy?
+	\item \textbf{Q3} - Can we improve the performance of a learner by mixing the quality of traces?
+\end{itemize}
 
 \section{Results summary}
-
-
-\ac{cut this - show specific plots for each experiment}
-We present the conglomerated results in two forms. As a table and as a bar graph. The full results for each game and predicate learned are too lengthy to include in this paper. They can however be found in the code repository\footnote{https://github.com/Aflynn50/GPP-3rd-year-project} as well as by rerunning the experiment.
-
-
- \ac{I would reiterate the research questions here}
-
 \ac{
 	Are the results the same for all the games?
 	Are their any games in particular that benefit from more traces or optimal play?
 }
 
 \subsection{E1: Varying the quality of game traces}
+For question Q1 we preform experiment E1 where we train and test each system on random and intelligent traces. Generally the differences in balanced accuracy were unpronounced. To show this we use the $\chi^2$ (chi squared) test to calculate the statistical significance of our results. Since the biggest difference between any two balanced accuracy testing results between two distributions was for Aleph, where it was trained on Sancho traces and tested on Random (balanced accuracy of 65) and Sancho (balanced accuracy of 72), the $\chi^2$ test was performed on these. The result was a p-value of 0.6723. This value is well above any reasonable threshold for statistical significance meaning the results can be viewed as not significant. 
 \ac{talk about the results of this experiment}
 
 
@@ -82,11 +69,11 @@ Balanced accuracy
 		\multirow{2}{*}{Systems} & \multicolumn{2}{c|}{Random} & \multicolumn{2}{c|}{Sancho} & \multicolumn{2}{c|}{Mixed} \\ \cline{2-7}
 		& Random       & Sancho       & Random       & Sancho       & Random       & Sancho      \\ \hline
 		Metagol                  & 51           & 51           & 51           & 51           & 51           & 51          \\ \hline
-		Aleph                    & 66           & 65           & 65           & 72           & 80           & 66          \\ \hline
+		Aleph                    & 66           & 65           & 65           & 72           & 67           & 66          \\ \hline
 		ILASP                    & 72           & 72           & 71           & 72           & 73           & 73          \\ \hline
 	\end{tabular}
-	\label{givemeaname}
-	\caption{\ac{give me a caption - explain what the columns are. Which column / row is train? Which is test?}}
+	\label{E1-BA}
+	\caption{The average balanced accuracies across all games and predicates for each system in E1. Each row gives the balanced accuracies of one system. Each was trained on random, Sancho generated and mixed traces then tested against random and Sancho generated. The top of the two header rows gives the training distribution and the lower gives the test distribution}
 \end{table}
 
 
@@ -100,8 +87,8 @@ Balanced accuracy
 		Aleph                    & 1            & 0            & 0            & 4            & 7            & 0           \\ \hline
 		ILASP                    & 7            & 8            & 5            & 10           & 7            & 8           \\ \hline
 	\end{tabular}
-	\label{givemeaname}
-	\caption{\ac{give me a caption}}
+	\label{E1-P}
+	\caption{The number of perfectly solved scores for each system trained and tested as described in E1}
 \end{table}
 
 \begin{table}[]
@@ -114,8 +101,8 @@ Balanced accuracy
 		Aleph                    & 67             & 66            & 67             & 65             & 67             & 65             \\ \hline
 		ILASP                    & 73             & 73            & 85             & 85             & 85             & 85             \\ \hline
 	\end{tabular}
-	\label{givemeaname}
-	\caption{\ac{give me a caption}}
+	\label{E2-BA}
+	\caption{The average balanced accuracy for each system trained and tested as described in E2}
 \end{table}
 
 \begin{table}[]
@@ -128,8 +115,8 @@ Balanced accuracy
 		Aleph                    & 1              & 0             & 0              & 0              & 0              & 0              \\ \hline
 		ILASP                    & 7              & 8             & 76             & 76             & 76             & 76             \\ \hline
 	\end{tabular}
-	\label{givemeaname}
-	\caption{\ac{give me a caption}}
+	\label{E2-P}
+	\caption{The number of perfectly solved scores for each system trained and tested as described in E2}
 \end{table}
 
 \begin{tikzpicture}
@@ -171,178 +158,73 @@ Balanced accuracy
 
 \end{tikzpicture}
 
-\section{Varying quality training data}
 
-\subsubsection{Random training}
-\begin{tikzpicture}
-\begin{axis}[
-	ylabel=Balanced Accuracy,
-	width=6cm,
-	enlargelimits=0.05,
-	legend style={at={(0.5,1.3)},
-	anchor=north,
-	legend columns=-1},
-	ybar interval=0.5,
-	symbolic x coords={ilasp,metagol,aleph, poog}
-]
-\addplot
-	coordinates {(ilasp,71) (metagol,51) (aleph,66) (poog, 65)};
-\addplot
-	coordinates {(ilasp,72) (metagol,51) (aleph,65) (poog,65)};
-\legend{Tested on random,Tested on optimal}
-\end{axis}
-\end{tikzpicture}
-~
-\begin{tikzpicture}
-\begin{axis}[
-	width=6cm,
-	ylabel=Number of perfect games,
-	enlargelimits=0.05,
-	ybar interval=0.5,
-	symbolic x coords={ilasp,metagol,aleph, poog}
-]
-\addplot
-	coordinates {(ilasp,7) (metagol,0) (aleph,1) (poog, 0)};
-\addplot
-	coordinates {(ilasp,8) (metagol,0) (aleph,0) (poog,0)};
-\end{axis}
-\end{tikzpicture}
-\subsubsection{Optimal training}
-\begin{tikzpicture}
-\begin{axis}[
-ylabel=Balanced Accuracy,
-width=6cm,
-enlargelimits=0.05,
-legend style={at={(0.5,1.3)},
-	anchor=north,
-	legend columns=-1},
-ybar interval=0.5,
-symbolic x coords={ilasp,metagol,aleph, poog}
-]
-\addplot
-coordinates {(ilasp,71) (metagol,51) (aleph,65) (poog, 65)};
-\addplot
-coordinates {(ilasp,72) (metagol,51) (aleph,72) (poog,65)};
-\legend{Tested on random,Tested on optimal}
-\end{axis}
-\end{tikzpicture}
-~
-\begin{tikzpicture}
-\begin{axis}[
-width=6cm,
-ylabel=Number of perfect games,
-enlargelimits=0.05,
-ybar interval=0.5,
-symbolic x coords={ilasp,metagol,aleph, poog}
-]
-\addplot
-coordinates {(ilasp,5) (metagol,0) (aleph,0) (poog, 0)};
-\addplot
-coordinates {(ilasp,10) (metagol,0) (aleph,4) (poog,0)};
-\end{axis}
-\end{tikzpicture}
-\subsubsection{Mixed training}
-\begin{tikzpicture}
-\begin{axis}[
-ylabel=Balanced Accuracy,
-width=6cm,
-enlargelimits=0.05,
-legend style={at={(0.5,1.3)},
-	anchor=north,
-	legend columns=-1},
-ybar interval=0.5,
-symbolic x coords={ilasp,metagol,aleph, poog}
-]
-\addplot
-coordinates {(ilasp,73) (metagol,51) (aleph,80) (poog,70)};
-\addplot
-coordinates {(ilasp,73) (metagol,51) (aleph,66) (poog,70)};
-\legend{Tested on random,Tested on optimal}
-\end{axis}
-\end{tikzpicture}
-~
-\begin{tikzpicture}
-\begin{axis}[
-width=6cm,
-ylabel=Number of perfect games,
-enlargelimits=0.05,
-ybar interval=0.5,
-symbolic x coords={ilasp,metagol,aleph, poog}
-]
-\addplot
-coordinates {(ilasp,7) (metagol,0) (aleph,7) (poog, 0)};
-\addplot
-coordinates {(ilasp,8) (metagol,0) (aleph,0) (poog,0)};
-\end{axis}
-\end{tikzpicture}
-
-\subsubsection{Mixed training with 16 traces}
-\begin{tikzpicture}
-\begin{axis}[
-ylabel=Balanced Accuracy,
-width=6cm,
-enlargelimits=0.05,
-legend style={at={(0.5,1.3)},
-	anchor=north,
-	legend columns=-1},
-ybar interval=0.5,
-symbolic x coords={ilasp,metagol,aleph, poog}
-]
-\addplot
-coordinates {(ilasp,85) (metagol,51) (aleph,65) (poog,70)};
-\addplot
-coordinates {(ilasp,85) (metagol,51) (aleph,67) (poog,70)};
-\legend{Tested on random,Tested on optimal}
-\end{axis}
-\end{tikzpicture}
-~
-\begin{tikzpicture}
-\begin{axis}[
-width=6cm,
-ylabel=Number of perfect games,
-enlargelimits=0.05,
-ybar interval=0.5,
-symbolic x coords={ilasp,metagol,aleph, poog}
-]
-\addplot
-coordinates {(ilasp,76) (metagol,0) (aleph,0) (poog, 0)};
-\addplot
-coordinates {(ilasp,76) (metagol,0) (aleph,0) (poog,0)};
-\end{axis}
-\end{tikzpicture}
-
-\subsubsection{Mixed training with 24 traces}
-\begin{tikzpicture}
-\begin{axis}[
-ylabel=Balanced Accuracy,
-width=6cm,
-enlargelimits=0.05,
-legend style={at={(0.5,1.3)},
-	anchor=north,
-	legend columns=-1},
-ybar interval=0.5,
-symbolic x coords={ilasp,metagol,aleph, poog}
-]
-\addplot
-coordinates {(ilasp,85) (metagol,51) (aleph,65) (poog,70)};
-\addplot
-coordinates {(ilasp,85) (metagol,51) (aleph,67) (poog,70)};
-\legend{Tested on random,Tested on optimal}
-\end{axis}
-\end{tikzpicture}
-~
-\begin{tikzpicture}
-\begin{axis}[
-width=6cm,
-ylabel=Number of perfect games,
-enlargelimits=0.05,
-ybar interval=0.5,
-symbolic x coords={ilasp,metagol,aleph, poog}
-]
-\addplot
-coordinates {(ilasp,76) (metagol,0) (aleph,0) (poog, 0)};
-\addplot
-coordinates {(ilasp,76) (metagol,0) (aleph,0) (poog,0)};
-\end{axis}
-\end{tikzpicture}
+%\subsubsection{Random training}
+%\begin{tikzpicture}
+%\begin{axis}[
+%	ylabel=Balanced Accuracy,
+%	width=6cm,
+%	enlargelimits=0.05,
+%	legend style={at={(0.5,1.3)},
+%	anchor=north,
+%	legend columns=-1},
+%	ybar interval=0.5,
+%	symbolic x coords={ilasp,metagol,aleph, poog}
+%]
+%\addplot
+%	coordinates {(ilasp,71) (metagol,51) (aleph,66) (poog, 65)};
+%\addplot
+%	coordinates {(ilasp,72) (metagol,51) (aleph,65) (poog,65)};
+%\legend{Tested on random,Tested on optimal}
+%\end{axis}
+%\end{tikzpicture}
+%~
+%\begin{tikzpicture}
+%\begin{axis}[
+%	width=6cm,
+%	ylabel=Number of perfect games,
+%	enlargelimits=0.05,
+%	ybar interval=0.5,
+%	symbolic x coords={ilasp,metagol,aleph, poog}
+%]
+%\addplot
+%	coordinates {(ilasp,7) (metagol,0) (aleph,1) (poog, 0)};
+%\addplot
+%	coordinates {(ilasp,8) (metagol,0) (aleph,0) (poog,0)};
+%\end{axis}
+%\end{tikzpicture}
+%\subsubsection{Optimal training}
+%\begin{tikzpicture}
+%\begin{axis}[
+%ylabel=Balanced Accuracy,
+%width=6cm,
+%enlargelimits=0.05,
+%legend style={at={(0.5,1.3)},
+%	anchor=north,
+%	legend columns=-1},
+%ybar interval=0.5,
+%symbolic x coords={ilasp,metagol,aleph, poog}
+%]
+%\addplot
+%coordinates {(ilasp,71) (metagol,51) (aleph,65) (poog, 65)};
+%\addplot
+%coordinates {(ilasp,72) (metagol,51) (aleph,72) (poog,65)};
+%\legend{Tested on random,Tested on optimal}
+%\end{axis}
+%\end{tikzpicture}
+%~
+%\begin{tikzpicture}
+%\begin{axis}[
+%width=6cm,
+%ylabel=Number of perfect games,
+%enlargelimits=0.05,
+%ybar interval=0.5,
+%symbolic x coords={ilasp,metagol,aleph, poog}
+%]
+%\addplot
+%coordinates {(ilasp,5) (metagol,0) (aleph,0) (poog, 0)};
+%\addplot
+%coordinates {(ilasp,10) (metagol,0) (aleph,4) (poog,0)};
+%\end{axis}
+%\end{tikzpicture}
 
