--- a/Report/project.bib
+++ b/Report/project.bib
@@ -466,3 +466,152 @@ journal = {Mathematical Spectrum}
 	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{Svetla/ILPOverview,
+	author = {Boytcheva, Svetla},
+	year = {2002},
+	month = {01},
+	pages = {},
+	title = {Overview of Inductive Logic Programming (ILP) Systems}
+}
+
+@article{Cropper/NewIdeas,
+	author    = {Andrew Cropper and
+	Sebastijan Dumancic and
+	Stephen H. Muggleton},
+	title     = {Turning 30: New Ideas in Inductive Logic Programming},
+	journal   = {CoRR},
+	volume    = {abs/2002.11002},
+	year      = {2020},
+	url       = {https://arxiv.org/abs/2002.11002},
+	archivePrefix = {arXiv},
+	eprint    = {2002.11002},
+	timestamp = {Tue, 03 Mar 2020 14:32:13 +0100},
+	biburl    = {https://dblp.org/rec/journals/corr/abs-2002-11002.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Raedt/Interactive,
+	author    = {Luc De Raedt and
+	Maurice Bruynooghe},
+	title     = {Interactive Concept-Learning and Constructive Induction by Analogy},
+	journal   = {Mach. Learn.},
+	volume    = {8},
+	pages     = {107--150},
+	year      = {1992},
+	url       = {https://doi.org/10.1007/BF00992861},
+	doi       = {10.1007/BF00992861},
+	timestamp = {Mon, 02 Mar 2020 16:28:49 +0100},
+	biburl    = {https://dblp.org/rec/journals/ml/RaedtB92.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Bellodi/Probablistic,
+	author    = {Elena Bellodi and
+	Fabrizio Riguzzi},
+	title     = {Structure learning of probabilistic logic programs by searching the
+	clause space},
+	journal   = {Theory Pract. Log. Program.},
+	volume    = {15},
+	number    = {2},
+	pages     = {169--212},
+	year      = {2015},
+	url       = {https://doi.org/10.1017/S1471068413000689},
+	doi       = {10.1017/S1471068413000689},
+	timestamp = {Thu, 13 Feb 2020 14:39:30 +0100},
+	biburl    = {https://dblp.org/rec/journals/tplp/BellodiR15.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{Raedt/Probabalistic,
+	author    = {Luc De Raedt and
+	Anton Dries and
+	Ingo Thon and
+	Guy Van den Broeck and
+	Mathias Verbeke},
+	editor    = {Qiang Yang and
+	Michael J. Wooldridge},
+	title     = {Inducing Probabilistic Relational Rules from Probabilistic Examples},
+	booktitle = {Proceedings of the Twenty-Fourth International Joint Conference on
+	Artificial Intelligence, {IJCAI} 2015, Buenos Aires, Argentina, July
+	25-31, 2015},
+	pages     = {1835--1843},
+	publisher = {{AAAI} Press},
+	year      = {2015},
+	url       = {http://ijcai.org/Abstract/15/261},
+	timestamp = {Tue, 20 Aug 2019 16:16:43 +0200},
+	biburl    = {https://dblp.org/rec/conf/ijcai/RaedtDTBV15.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Cropper/Metarules,
+	author    = {Andrew Cropper and
+	Sophie Tourret},
+	title     = {Logical reduction of metarules},
+	journal   = {CoRR},
+	volume    = {abs/1907.10952},
+	year      = {2019},
+	url       = {http://arxiv.org/abs/1907.10952},
+	archivePrefix = {arXiv},
+	eprint    = {1907.10952},
+	timestamp = {Thu, 01 Aug 2019 08:59:33 +0200},
+	biburl    = {https://dblp.org/rec/journals/corr/abs-1907-10952.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{Oblak/Noise,
+	author    = {Andrej Oblak and
+	Ivan Bratko},
+	editor    = {Paolo Frasconi and
+	Francesca A. Lisi},
+	title     = {Learning from Noisy Data Using a Non-covering {ILP} Algorithm},
+	booktitle = {Inductive Logic Programming - 20th International Conference, {ILP}
+	2010, Florence, Italy, June 27-30, 2010. Revised Papers},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {6489},
+	pages     = {190--197},
+	publisher = {Springer},
+	year      = {2010},
+	url       = {https://doi.org/10.1007/978-3-642-21295-6\_22},
+	doi       = {10.1007/978-3-642-21295-6\_22},
+	timestamp = {Tue, 14 May 2019 10:00:36 +0200},
+	biburl    = {https://dblp.org/rec/conf/ilp/OblakB10.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{Evans/Noise,
+	author    = {Richard Evans and
+	Edward Grefenstette},
+	title     = {Learning Explanatory Rules from Noisy Data},
+	journal   = {J. Artif. Intell. Res.},
+	volume    = {61},
+	pages     = {1--64},
+	year      = {2018},
+	url       = {https://doi.org/10.1613/jair.5714},
+	doi       = {10.1613/jair.5714},
+	timestamp = {Mon, 27 Jan 2020 16:21:19 +0100},
+	biburl    = {https://dblp.org/rec/journals/jair/EvansG18.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{Park/GGPAdvances,
+	author = {Świechowski, Maciej and Park, HyunSoo and Mańdziuk, Jacek and Kim, Kyung-Joong},
+	year = {2015},
+	month = {09},
+	pages = {986262},
+	title = {Recent Advances in General Game Playing},
+	volume = {2015},
+	journal = {TheScientificWorldJournal},
+	doi = {10.1155/2015/986262}
+}
+@article {Schaeffer/Checkers,
+	author = {Schaeffer, Jonathan and Burch, Neil and Bj{\"o}rnsson, Yngvi and Kishimoto, Akihiro and M{\"u}ller, Martin and Lake, Robert and Lu, Paul and Sutphen, Steve},
+	title = {Checkers Is Solved},
+	volume = {317},
+	number = {5844},
+	pages = {1518--1522},
+	year = {2007},
+	doi = {10.1126/science.1144079},
+	publisher = {American Association for the Advancement of Science},
+	issn = {0036-8075},
+	URL = {https://science.sciencemag.org/content/317/5844/1518},
+	eprint = {https://science.sciencemag.org/content/317/5844/1518.full.pdf},
+	journal = {Science}
+}
